# HM_db_connector

./: README.md  pyproject.toml
src/HM_db_connector/: MysqlConnector.py  __init__.py
tests/: test_import.py
